--- a/yearly.ipynb
+++ b/yearly.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4650305d",
+   "metadata": {},
+   "source": [
+    "##Import the June csv for each year, edit to make files uniform, clean, and output to one csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "e4966533",
